# libdots

./: .editorconfig  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: CODEOWNERS  ci-dev.yml  ci-push.yml  ci.yml  dependabot-auto-merge.yml
docs/: conf.py  index.rst  libdots.io.messages.rst  libdots.io.rst  libdots.model.rst  libdots.rst  quickstart.rst  requirements.txt
scripts/: compile_protobuf.sh
src/dots_utilities/: main.py  profiles.py  types.py
src/dots_utilities/io/: data.py  input_data_inventory.py  io_data.py  mqtt_client.py
src/dots_utilities/io/messages/: healthcheck_pb2.py  healthcheck_pb2.pyi  lifecycle_pb2.py  lifecycle_pb2.pyi
src/dots_utilities/model/: esdl_parser.py  service.py  service_calc.py
src/libdots/: __init__.py  profiles.py  types.py
src/libdots/io/: __init__.py  input_data_inventory.py  io_data.py  mqtt_client.py  mqtt_log_handler.py
src/libdots/io/messages/: __init__.py  healthcheck_pb2.py  healthcheck_pb2.pyi  lifecycle_pb2.py
src/libdots/model/: __init__.py  config.py  esdl_parser.py  influxdb_connector.py  service.py  service_calc.py
tests/: __init__.py  conftest.py  test_main.py
tests/io/: test_mqtt_client.py
tests/model/: test_service.py  test_service_calc.py
tests/profiles/: test_uri_profiles.py
typings/esdl/: __init__.pyi  _version.pyi  ecore_documentation.pyi  esdl.pyi  esdl_handler.pyi  support_functions.pyi
typings/esdl/resources/: xmi.pyi  xmlresource.pyi
typings/google/api_core/: __init__.pyi  client_info.pyi  client_options.pyi  datetime_helpers.pyi  exceptions.pyi  iam.pyi  page_iterator.pyi
typings/google/api_core/retry/: __init__.pyi  retry_base.pyi  retry_streaming.pyi  retry_streaming_async.pyi  retry_unary.pyi  retry_unary_async.pyi
typings/google/auth/: __init__.pyi  _cloud_sdk.pyi  _credentials_base.pyi  _default.pyi  _exponential_backoff.pyi  _helpers.pyi  _refresh_worker.pyi  _service_account_info.pyi  api_key.pyi  app_engine.pyi  aws.pyi  credentials.pyi  exceptions.pyi  external_account.pyi  external_account_authorized_user.pyi  iam.pyi  identity_pool.pyi  impersonated_credentials.pyi  jwt.pyi  metrics.pyi  pluggable.pyi
typings/google/auth/compute_engine/: __init__.pyi  _metadata.pyi  credentials.pyi
typings/google/auth/crypt/: __init__.pyi  _cryptography_rsa.pyi  _python_rsa.pyi  base.pyi  es256.pyi
typings/google/auth/transport/: __init__.pyi  _custom_tls_signer.pyi  _http_client.pyi  _mtls_helper.pyi  grpc.pyi  requests.pyi
typings/google/cloud/_helpers/: __init__.pyi
typings/google/cloud/_http/: __init__.pyi
typings/google/cloud/client/: __init__.pyi
typings/google/cloud/exceptions/: __init__.pyi
typings/google/cloud/storage/: __init__.pyi  _helpers.pyi  _http.pyi  _opentelemetry_tracing.pyi  _signing.pyi  acl.pyi  batch.pyi  blob.pyi  bucket.pyi  client.pyi  constants.pyi  fileio.pyi  hmac_key.pyi  iam.pyi  notification.pyi  retry.pyi  transfer_manager.pyi
typings/google/oauth2/: __init__.pyi  _client.pyi  challenges.pyi  credentials.pyi  gdch_credentials.pyi  reauth.pyi  service_account.pyi  sts.pyi  utils.pyi  webauthn_handler.pyi  webauthn_handler_factory.pyi  webauthn_types.pyi
typings/google/resumable_media/: __init__.pyi  _download.pyi  _helpers.pyi  _upload.pyi  common.pyi
typings/google/resumable_media/requests/: __init__.pyi  _request_helpers.pyi  download.pyi  upload.pyi
typings/influxdb/: __init__.pyi  _dataframe_client.pyi  chunked_json.pyi  client.pyi  dataframe_client.pyi  exceptions.pyi  helper.pyi  line_protocol.pyi  resultset.pyi
typings/influxdb/influxdb08/: __init__.pyi  client.pyi  dataframe_client.pyi  helper.pyi
typings/influxdb/tests/: __init__.pyi
typings/pyecore/: __init__.pyi  behavior.pyi  commands.pyi  ecore.pyi  innerutils.pyi  notification.pyi  ordered_set_patch.pyi  utils.pyi  valuecontainer.pyi
typings/pyecore/resources/: __init__.pyi  resource.pyi  xmi.pyi
typings/pyecore/type/: __init__.pyi  type.pyi
